# simple-django-api

./: Makefile  README.md  appconfig.example.env  compose.yml  pyproject.toml
config/: api_urls.py  settings.py  urls.py
simple_django/accounts/: apps.py  managers.py  models.py  signals.py  tasks.py  types.py
simple_django/accounts/api/: permissions.py  serializers.py  urls.py  utils.py  views.py
simple_django/accounts/migrations/: 0002_emailaddress.py
templates/: home.html
templates/accounts/emails/: confirm_email_address.html  confirm_email_address.txt
templates/layouts/: email.html
templates/partials/: _email-cta.html
